--- a/src/widgets/components/search.scss
+++ b/src/widgets/components/search.scss
@@ -1,22 +1,34 @@
 $color-blue: #0f7aff;
+$input-width: 227px;
+$transition-min-width: 880px;
+
+.display-inline {
+  display: inline;
+}
 
 .nav-icons {
   color: white;
   font-size: 1.5em;
-  margin: 0px 0.5em;
+  margin: 0px 0.2em;
   color: #a1a3a6;
+  text-align: center;
 }
 
 .search-form {
-  margin-right: 0;
+  margin-right: 1em;
 }
 
 .search-input {
+  display: inline;
   border-radius: 7px 0px 0px 7px;
   margin-right: 0 !important;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .search-button {
+  display: inline;
   background-color: $color-blue;
   color: white;
   border-radius: 0px 7px 7px 0px !important;
@@ -38,3 +50,19 @@ $color-blue: #0f7aff;
   top: 70px;
   width: 280px;
 }
+
+.search-text {
+  display: inline;
+  border-radius: 7px 0px 0px 7px;
+  width: $input-width;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+@media screen and (min-width: $transition-min-width) {
+  .search-text:focus {
+    width: $input-width * 2;
+  }
+}
+
