--- a/src/widgets/components/search.scss
+++ b/src/widgets/components/search.scss
@@ -68,10 +68,14 @@ $transition-time: 1s;
 
   .nav-icons {
     color: white;
-    font-size: 1em;
-    margin: 0px 0.2em;
+    font-size: 0.8em;
+    margin: 0 0.1em;
     color: #a1a3a6;
     text-align: center;
+  }
+
+  .align-middle {
+    margin: 0.5em 0 0 0;
   }
 }
 
