--- a/src/widgets/components/search.scss
+++ b/src/widgets/components/search.scss
@@ -2,13 +2,13 @@ $color-blue: #0f7aff;
 $input-width: 227px;
 $transition-min-width: 880px;
 $transition-time: 1s;
+$query-max-width: 570px;
 
 .display-inline {
   display: inline;
 }
 
 .nav-icons {
-  color: white;
   font-size: 1.5em;
   margin: 0px 0.2em;
   color: #a1a3a6;
@@ -63,33 +63,25 @@ $transition-time: 1s;
 
 @media screen and (min-width: $transition-min-width) {
   .search-text:focus {
-    width: 1$input-width - 100px;
-  }
-
-  .nav-icons {
-    color: white;
-    font-size: 0.8em;
-    margin: 0 0.1em;
-    color: #a1a3a6;
-    text-align: center;
-  }
-
-  .align-vertical-icons {
-    margin: 0.5em 0 0 0 !important;
+    width: $input-width * 2;
   }
 }
 
-@media screen and (max-width: $transition-min-width + 1) {
+/* Landscape phones and down */
+@media (max-width: 525px) {
+   .search-text {
+    width: 222px;
+  }
+
   .nav-icons {
-    color: white;
-    font-size: 0.8em;
-    margin: 0 0.1em;
+    font-size: 1.5em;
+    margin: 0px 0.2em;
     color: #a1a3a6;
     text-align: center;
   }
 
-  .align-vertical-icons {
-    margin: 0.5em 0 0 0 !important;
+  .notifications {
+    display: none;
   }
 }
 
